--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,6 +36,15 @@
             font-family: 'Courier New', monospace;
             height: 200px;
         }
+        .sidebar .fas {
+            width: 16px;
+            font-size: 16px;
+        }
+        .sidebar .mt-auto {
+            margin-top: 2rem !important;
+            padding-top: 1rem;
+            border-top: 1px solid #495057;
+        }
     </style>
 </head>
 <body>
