--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,7 +37,7 @@
             height: 200px;
         }
         .sidebar .mt-auto {
-            margin-top: 1rem !important;
+            /* margin-top: 1rem !important; */
             padding: 0.75rem 1rem 0 1rem;
             border-top: 1px solid #495057;
         }
